@@ -38,6 +38,7 @@
       <w>userid</w>
       <w>vids</w>
       <w>wikipedia</w>
+      <w>wpstats</w>
       <w>wtfpl</w>
     </words>
   </dictionary>
