@@ -13,6 +13,7 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 * Reduced the citation font-size for better aesthetics
 * Change to only append to the `cite` tag when it is inside the `blockquote` tag
 * Center align Calendar Day table header cells
+* General clean-up and removal of excess/over-writing properties
 
 = Miscellaneous =
 * Updated tags used in `style.css` header block to include responsive-layout and fluid-layout
